--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -3,8 +3,10 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Raimon Grau} % Your name
-\address{Teuleria 31\\ La Granada del Penedes} % Your address
-\address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
+\address{ raimonster@gmail.com \\ http://puntoblogspot.blogspot.com \\ https://github.com/kidd/Me }
+
+%\address{Teuleria 31\\ La Granada del Penedes} % Your address
+%\address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
 
 \begin{document}
 
@@ -30,18 +32,20 @@ English - high\\
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{3scale, Inc}{July 2011 - Present}{Web Developer, Backend Developer}{Barcelona, Spain}
+\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - Present}{Web Developer, Backend Developer, Team Lead}{Barcelona, Spain}
 \item Working on a Ruby on Rails application to manage API authentication and rate limitings.
 \item Develop a code generator to create Nginx Lua configurations from
-  some rules introduced by the users. Also run nginx on cloud to host
-  these configurations.
+  rules introduced by the users. Also run nginx on cloud to host these
+  configurations. Developed with Ruby, Lua, Nginx and Redis.
 \item Work in an Nginx+Lua solution to cache calls to external apis to
   reduce the outbound traffic and be able to not get hit by rate
-  limits. Highly concurrent calls and heavy redis usage.
-\item Work in apitools.com project from the beginning until current
-  state. Nginx platform + docker to allow users to proxy all the
-  outbound traffic through apitools and monitor and code middleware to
-  modify the API calls. Did a talk on that in ApiDays Barcelona 2014.
+  limits (500rps). Highly concurrent calls and heavy redis usage. Lua, Nginx
+  and Redis.
+\item Work in apitools.com (http://www.apitools.com) project from the
+  beginning until current state. Nginx platform + docker to allow
+  users to proxy all the outbound traffic through apitools and monitor
+  and code middleware to modify the API calls. Did a talk on that in
+  ApiDays Barcelona 2014. Basic usage of Docker.
 \end{rSubsection}
 
 %------------------------------------------------
@@ -54,11 +58,12 @@ English - high\\
 
 %------------------------------------------------
 
-\begin{rSubsection}{Intelligent Pharma}{July 2008 - December 2010}{Developer}{Barcelona, Spain}
+\begin{rSubsection}{Intelligent Pharma - http://intelligentpharma.com/}{July 2008 - December 2010}{Developer}{Barcelona, Spain}
 \item Developing Artificial intelligence software for drug discovery.
 \item Evolutionary algorithms and Genetic programming.
 \item Development in Perl, C++ and using unix everywhere. First usage of Mercurial.
-\item coarse grained paralelization of jobs running in supercomputers (MareNostrum)
+\item coarse grained paralelization of jobs running in supercomputers
+  (MareNostrum, the 2nd biggest supercomputer at that time)
 \end{rSubsection}
 
 
@@ -75,13 +80,17 @@ English - high\\
 
 \begin{rSection}{Skills}
 
-\item Computer Languages: Ruby, Perl, Lua, Lisp, Assembler, C. I'm a programming language fanatic so I've dabbled with lots of others  (either at university or for fun): Python, Prolog, C++, Java, Scheme, Clojure, Smalltalk, CL,Dylan, Io, Factor, Forth, Shen, Erlang, Elixir, Haskell, Oz, and written some very basic lisp interpreters (see github).
+\item Computer Languages: Ruby, Perl, Lua, Lisp, Assembly, C (basic). I'm a programming language fanatic so I've dabbled with lots of others  (either at university or for fun): Python, Prolog, C++, Java, Scheme, Clojure, Smalltalk, CL,Dylan, Io, Factor, Forth, Shen, Erlang, Elixir, Haskell, Oz, and written some very basic lisp interpreters (see github).
 
-\item Protocols \& APIs: HTTP, JSON, REST
-Databases \& MySQL, Redis, MongoDB. I tried lots of others from Tarantool to influxdb or mnesia.
-\item Tools: Zsh, screen, Vim (heavy user for 5 years, written some plugins), Emacs (heavy user for 4 years, written some plugins and have code in the dist), git.
-\item good comunication skills.
-\item I used to reverse engineer software (1997-2000). Most of it is outdated now, but my approach to things stayed.
+\item Protocols \& APIs: HTTP, JSON, REST Databases \& MySQL, Redis,
+  MongoDB. I tried lots of others from Tarantool to influxdb or
+  mnesia. No real world experience with.those though.
+\item Tools: Zsh, screen, Vim (heavy user for 5 years, written some
+  plugins), Emacs (heavy user for 4 years, written some plugins and
+  have code in the main project), git. Basic docker knowledge.
+\item Good comunication skills.
+\item I used to reverse engineer software (1997-2000). Most of it is
+  outdated now, but my approach to problem solving stayed.
 
 \end{rSection}
 
@@ -110,8 +119,18 @@ Databases \& MySQL, Redis, MongoDB. I tried lots of others from Tarantool to inf
 \item Barcelona Perl Mongers
 \item Vimperator ( http://vimperator-labs.googlecode.com/hg/vimperator/AUTHORS )
 \item Emacs
-\item Vectorlinux. I developed a few apps to help packaging apps for vectorlinux and maintaining the repos. Also a migration tool for old versions.
-\item GNU Guix. Packaged a few apps and wrote tutorial.
+\item Vectorlinux. I developed a few apps to help packaging apps for
+  vectorlinux and maintaining the repos. Also a migration tool for old
+  versions in Perl
+\item GNU Guix. Packaged a few packages.
+
+\end{rSection}
+
+\begin{rSection}{Personal}
+
+\item I love music (from rock and jazz to funk and psy \ldots),
+\item I like reading (obiously, my favourite books are SICP and GEB)
+\item I used to play Guitar and bass guitar.
 
 \end{rSection}
 
