--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -93,6 +93,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   REST, MySQL, Redis, MongoDB. Some experience with lots of others:
   Postgresql, Tarantool, influxdb, mnesia, Gemstone/S, DataFlex.  No
   real world experience with those though.
+
 \item Tools: Zsh, screen, Vim (heavy user for 5 years, written some
   plugins), Emacs (heavy user for 5 years, written some plugins and
   contributed code to  emacs itself), git, docker.
@@ -103,6 +104,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   no silver bullet), and like to usually keep things very simple
   (\url{http://suckless.org}). I believe simplicity and uniformity
   sometimes wins 'the perfect tool for the job' x Number-of-jobs.
+
 \item Good comunication skills and enthusiast both teacher \& learner.
 \item I used to reverse engineer software (1997-2000). Most of it is
   outdated now, but my approach to problem solving stayed.
@@ -125,21 +127,47 @@ English - high ('writen' and spoken (yes, it's a joke))\\
 
 \end{rSection}
 
-\begin{rSection}{Pet Projects and Free Software}
+\begin{rSection}{Projects and Free Software}
 
   I'm a convinced advocate of Free software, and I have several
   projects opensourced in github (http://www.github.com/kidd), and
   I've contributed to several others. Also I've been involved in
   several open source communities. For example:
 
-\item Barcelona Perl Mongers
-\item Vimperator
-\item Emacs
-\item Vectorlinux. I developed a few apps to help packaging apps for
-  vectorlinux and maintaining the repos. Also a migration tool for old
-  versions in Perl
-\item GNU Guix.
-\item More in github\ldots
+\item Member of Barcelona Perl Mongers.
+\item Member of Smalltalk.cat.
+\item Patch published in Vimperator (2008)
+\item Closely following Emacs development. Commited some code. There's
+  much to learn from a 30 year old software project at both code level
+  and management level.
+\item (ex-)member of Vectorlinux crew. I developed a few apps to
+  package apps for vectorlinux and maintaining the repos. Also a
+  migration tool for old packages to new packages, tracking
+  dependencies and recursively building them in preorder.
+\item Following GNU Guix development and IRC.  I package and maintain
+  a few packages (luajit, openresty, xmlstarlet).
+\item \href{https://github.com/areina/helm-dash}{Helm-dash.el}
+  (coauthor/maintainer). Browse documentation offline from within
+  emacs. It reads Dash docsets. (~170 stars)
+\item
+  \href{https://github.com/kidd/erc-image.el}{erc-image.el} /
+  \href{https://github.com/kidd/erc-youtube.el}{erc-youtube.el}
+  (author/maintainer). Visualize images inline in erc irc
+  client. (Included in spacemacs project)
+\item \href{https://github.com/apitools/router.lua}{router.lua}
+  (author/maintainer). Trie-based router in lua using unification
+  instead of simple matching, so that traveling a route is
+  O(route.size).
+\item \href{https://github.com/kidd/eva}{eva.lua}. supersimple and
+  toy-like lisp interpreter in lua
+\item \href{https://github.com/kidd/hascheme}{hascheme}(half assed
+  scheme). not so supersimple but still toy-like scheme interpreter in
+  Perl.
+\item \href{https://github.com/kidd/redditfs.lua}{redditfs.lua}. fuse
+  module written in lua to mount reddit as a file system.
+\item More on github. I completed some clojure courses, and there
+  are some pet projects I wrote in elixir/factor/elisp/Io \ldots
+
 \end{rSection}
 
 \begin{rSection}{Personal}
@@ -160,7 +188,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
 \item I also love good conversations over beers about programming
   languages.
 
-\item I blog in \url{http://puntoblogspot.blogspot.com}.
+\item I blog in \url{http://puntoblogspot.blogspot.com} since 2008.
 \item I like wordplays.
 \item I currently live in \href{https://www.google.es/maps/place/Tenerife/@28.2925426,-17.0803948,9z/data=!3m1!4b1!4m2!3m1!1s0xc4029effe8682ed:0xb01a4bf1c84baf3c}{Tenerife}.
 \item My Cv is on \href{https://github.com/kidd/Me}{Github}
