--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -33,7 +33,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - Present}{Web Developer, Backend Developer, Team Lead}{Barcelona, Spain}
+\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - Present}{Software Engineer, Team Lead}{Barcelona, Spain}
 \item Maintaining and developing a Ruby on Rails application to manage
   API authentication and rate limitings. Team lead since 2014.
 \item Develop a code generator to create Nginx Lua configurations from
@@ -43,11 +43,16 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   reduce the outbound traffic and be able to not get hit by rate
   limits (500rps). Highly concurrent calls and heavy redis usage. Lua,
   Nginx and Redis.
+\item Write an openresty module (lua) to perform the full oauth2
+  authentication process (both 2 and 3 legged).
 \item Work in apitools.com (http://www.apitools.com) project from the
   beginning until current state. Nginx platform + docker to allow
   users to proxy all the outbound traffic through apitools and monitor
   and code middleware to modify the API calls. Did a talk on that in
   ApiDays Barcelona 2014. Basic usage of Docker.
+\item 3scale itself is an API management company, so I've been dealing
+  with different kinds of API models, authentications,
+  rate\_limitings, documentation models, testing, etc...
 \end{rSubsection}
 
 %------------------------------------------------
