--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -6,8 +6,8 @@
 \name{Raimon Grau} % Your name
 \address{ raimonster@gmail.com \\ http://puntoblogspot.blogspot.com \\ https://github.com/kidd/Me }
 
-%\address{Teuleria 31\\ La Granada del Penedes} % Your address
-%\address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
+\address{@Barcelona OR @Tenerife \\ Spain} % Your address
+%% \address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
 
 \begin{document}
 
