--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -6,7 +6,7 @@
 \name{Raimon Grau} % Your name
 \address{ raimonster@gmail.com \\ http://puntoblogspot.blogspot.com \\ https://github.com/kidd/Me }
 
-\address{@Barcelona OR @Tenerife \\ Spain} % Your address
+\address{@Barcelona OR @Tenerife OR @Malaga \\ Spain} % Your address
 %% \address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -25,15 +25,28 @@ Final thesis on Evolutionary Algorithms graded with Honours. \smallskip \\
 \begin{rSection}{Languages}
 Spanish - native\\
 Catalan - native\\
-English - high ('writen' and spoken (yes, it's a joke))\\
+English - high ('writen' and spoken (yes, it's a joke :) ))\\
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
+\begin{rSubsection}{RavenPack International - https://ravenpack.com}{June 2016  - Present}{Software Engineer, Common Lisp Developer}{Marbella, Spain}
+\item Modernizing a 10 y.o Common Lisp codebase adding a test suite
+  and a build system for it migrating it into continuous
+  integration.
+\item Writting a streamming api for advanced filtering of information
+  (think twitter hose with more advanced filters). Using Common Lisp
+  for backend and Nginx for the distribution.  Delivering 2.5M unique
+  events per day.
+\item Improving a REST API performance by using worker queues when
+  possible in different parts of the system. Using both internal
+  in-memory queues and AWS SQS. Common Lisp + Python.
 
-\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - Present}{Software Engineer, Team Lead}{Barcelona, Spain}
+\end{rSubsection}
+
+\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - June 2016}{Software Engineer, Team Lead}{Barcelona, Spain}
 \item Maintaining and developing a Ruby on Rails application to manage
   API authentication and rate limitings. Team lead since 2014.
 \item Develop a code generator to create Nginx Lua configurations from
@@ -87,21 +100,24 @@ English - high ('writen' and spoken (yes, it's a joke))\\
 
 \begin{rSection}{Skills}
 
-\item Computer Languages: Ruby, Perl, Lua, Lisp, Assembly, C (basic),
-  Clojure, Smalltalk.  I'm a programming language fanatic so I've
-  dabbled with lots of others (either at university or for fun):
-  Python, Prolog, C++, Java, Scheme, CL,Dylan, Io, Factor, Forth,
-  Shen, Erlang, Elixir, Haskell, Oz, and written some very basic lisp
-  interpreters (see github).
+\item Computer Languages: Ruby, Perl, Lua, Common Lisp, Elisp, C
+  (basic), Clojure, Smalltalk.  I'm a programming language fanatic so
+  I've dabbled with lots of others (either at university or for fun):
+  Python, Prolog, C++, Java, Scheme, Assembly, Dylan, Io, Factor,
+  Forth, Shen, Erlang, Elixir, Haskell, Oz, and written some very
+  basic Lisp interpreters (see github).
 
 \item Protocols \& APIs: Working experience with HTTP, JSON, XML,
-  REST, MySQL, Redis, MongoDB. Some experience with lots of others:
-  Postgresql, Tarantool, influxdb, mnesia, Gemstone/S, DataFlex.  No
-  real world experience with those though.
+  REST, SQL, Redis, MongoDB, Redshift, Oracle. Some experience with
+  lots of others: EventStore, Tarantool, influxdb, mnesia, Gemstone/S,
+  DataFlex.  No real world experience with those though.
 
-\item Tools: Zsh, screen, Vim (heavy user for 5 years, written some
-  plugins), Emacs (heavy user for 5 years, written some plugins and
-  contributed code to  emacs itself), git, docker.
+\item Development tools: Deep knowledge of zsh, screen, Vim (heavy
+  user for 5 years, written some plugins), Emacs (VERY heavy user for
+  5 years, written some plugins and contributed code to emacs itself),
+  git, Openresty (nginx+lua). Knowledge of elasticsearch, redis,
+  statsd+Graphite+grafana, AWS (experience with dynamodb, ec2, s3,
+  cloudwatch).
 
 \item Passionate learner, and willing to transmit enthusiasm for
   learning technologies and balance them with the current stable
@@ -110,16 +126,19 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   (\url{http://suckless.org}). I believe simplicity and uniformity
   sometimes wins 'the perfect tool for the job' x Number-of-jobs.
 
-\item Good comunication skills and enthusiast both teacher \& learner.
-\item I used to reverse engineer software (1997-2000). Most of it is
-  outdated now, but my approach to problem solving stayed.
+\item Good communication skills and enthusiast both teacher \& learner.
+
+\item I used to be into reverse engineering software (1997-2000). Most
+  of it is outdated now, but my approach to problem solving stayed.
 
 \end{rSection}
 
 \begin{rSection}{Conferences}
 
-  I love to attend conferences (preferably not very crouded/mainstream ones).
+  I love attending conferences (preferably not very crowded/mainstream ones).
 
+\item J on the Beach 2017. (Malaga, Spain)
+\item LambdaWorld 2016. (Cadiz, Spain)
 \item Euroclojure 2015. (Barcelona, Spain)
 \item Polyconf 2014. (Postdam, Poland)
 \item ApiDays Barcelona 2014. As a Speaker
@@ -142,7 +161,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
 \item Member of Barcelona Perl Mongers.
 \item Member of Smalltalk.cat.
 \item Patch published in Vimperator (2008)
-\item Closely following Emacs development. Commited some code. There's
+\item Closely following Emacs development. Committed some code. There's
   much to learn from a 30 year old software project at both code level
   and management level.
 \item (ex-)member of Vectorlinux crew. I developed a few apps to
@@ -153,7 +172,7 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   a few packages (luajit, openresty, xmlstarlet).
 \item \href{https://github.com/areina/helm-dash}{Helm-dash.el}
   (coauthor/maintainer). Browse documentation offline from within
-  emacs. It reads Dash docsets. (~170 stars)
+  emacs. It reads Dash docsets. (~270 stars)
 \item
   \href{https://github.com/kidd/erc-image.el}{erc-image.el} /
   \href{https://github.com/kidd/erc-youtube.el}{erc-youtube.el}
@@ -170,8 +189,12 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   Perl.
 \item \href{https://github.com/kidd/redditfs.lua}{redditfs.lua}. fuse
   module written in lua to mount reddit as a file system.
-\item More on github. I completed some clojure courses, and there
-  are some pet projects I wrote in elixir/factor/elisp/Io \ldots
+\item More on github. I've written are some pet projects I wrote in
+  elixir/factor/elisp/Io \ldots
+\item Backend of a geocaching-like app in clojure using ring,
+  compojure, secretary, korma, postgres+GIS and google cloud
+  messaging. Frontend of the app for mobile, using cordova and Google
+  maps api.
 
 \end{rSection}
 
@@ -185,17 +208,14 @@ English - high ('writen' and spoken (yes, it's a joke))\\
   \item \href{https://en.wikipedia.org/wiki/G%C3%B6del,_Escher,_Bach}{GEB},
   \item \href{http://norvig.com/paip.html}{PAIP}
   \item \href{http://hop.perl.plover.com/}{HOP} .
-  \item Currently reading
-    \href{https://www.info.ucl.ac.be/~pvr/book.html}{CTM}, which seems
-    to be a good candidate to enter the list).
-  \end{enumerate}
-\item I used to play Guitar and bass guitar.
+  \item \href{https://www.info.ucl.ac.be/~pvr/book.html}{CTM)
+\item I used to play Guitar and bass guitar. (very bad)
 \item I also love good conversations over beers about programming
   languages.
 
 \item I blog in \url{http://puntoblogspot.blogspot.com} since 2008.
 \item I like wordplays.
-\item I currently live in \href{https://www.google.es/maps/place/Tenerife/@28.2925426,-17.0803948,9z/data=!3m1!4b1!4m2!3m1!1s0xc4029effe8682ed:0xb01a4bf1c84baf3c}{Tenerife}.
+%\item I currently live in \href{https://www.google.es/maps/place/Tenerife/@28.2925426,-17.0803948,9z/data=!3m1!4b1!4m2!3m1!1s0xc4029effe8682ed:0xb01a4bf1c84baf3c}{Tenerife}.
 \item My Cv is on \href{https://github.com/kidd/Me}{Github}
 \end{rSection}
 
