--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -32,18 +32,17 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
-\begin{rSubsection}{RavenPack International - https://ravenpack.com}{June 2016  - Present}{Software Engineer, Common Lisp Developer}{Marbella, Spain}
+\begin{rSubsection}{RavenPack International - https://ravenpack.com}{June 2016  - August 2017}{Software Engineer, Common Lisp Developer}{Marbella, Spain}
 \item Modernizing a 10 y.o Common Lisp codebase adding a test suite
   and a build system for it migrating it into continuous
   integration.
 \item Writting a streamming api for advanced filtering of information
   (think twitter hose with more advanced filters). Using Common Lisp
-  for backend and Nginx for the distribution.  Delivering 2.5M unique
-  events per day.
+  for backend and Nginx+Nchan for the distribution.  Delivering 2.5M
+  unique events per day.
 \item Improving a REST API performance by using worker queues when
   possible in different parts of the system. Using both internal
   in-memory queues and AWS SQS. Common Lisp + Python.
-
 \end{rSubsection}
 
 \begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - June 2016}{Software Engineer, Team Lead}{Barcelona, Spain}
@@ -100,16 +99,16 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
 
 \begin{rSection}{Skills}
 
-\item Computer Languages: Ruby, Perl, Lua, Common Lisp, Elisp, C
-  (basic), Clojure, Smalltalk.  I'm a programming language fanatic so
-  I've dabbled with lots of others (either at university or for fun):
-  Python, Prolog, C++, Java, Scheme, Assembly, Dylan, Io, Factor,
+\item Computer Languages: Ruby, Perl, Lua, Common Lisp, Elisp,
+  Clojure, Smalltalk.  I'm a programming language fanatic so I've
+  dabbled with lots of others (either at university or for fun):
+  C, Rust, Python, Prolog, C++, Java, Scheme, Assembly, Dylan, Io, Factor,
   Forth, Shen, Erlang, Elixir, Haskell, Oz, and written some very
   basic Lisp interpreters (see github).
 
 \item Protocols \& APIs: Working experience with HTTP, JSON, XML,
   REST, SQL, Redis, MongoDB, Redshift, Oracle. Some experience with
-  lots of others: EventStore, Tarantool, influxdb, mnesia, Gemstone/S,
+  lots of others: EventStore, Tarantool, influxdb, Gemstone/S,
   DataFlex.  No real world experience with those though.
 
 \item Development tools: Deep knowledge of zsh, screen, Vim (heavy
@@ -172,7 +171,7 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
   a few packages (luajit, openresty, xmlstarlet).
 \item \href{https://github.com/areina/helm-dash}{Helm-dash.el}
   (coauthor/maintainer). Browse documentation offline from within
-  emacs. It reads Dash docsets. (~270 stars)
+  emacs. It reads Dash docsets. (~300 stars)
 \item
   \href{https://github.com/kidd/erc-image.el}{erc-image.el} /
   \href{https://github.com/kidd/erc-youtube.el}{erc-youtube.el}
@@ -195,7 +194,6 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
   compojure, secretary, korma, postgres+GIS and google cloud
   messaging. Frontend of the app for mobile, using cordova and Google
   maps api.
-
 \end{rSection}
 
 \begin{rSection}{Personal}
@@ -205,17 +203,18 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
   those that are known by their initials:
   \begin{enumerate}
   \item \href{https://mitpress.mit.edu/sicp/}{SICP}
-  \item \href{https://en.wikipedia.org/wiki/G%C3%B6del,_Escher,_Bach}{GEB},
+  \item \href{https://en.wikipedia.org/wiki/G%C3%B6del,_Escher,_Bach}{GEB}
   \item \href{http://norvig.com/paip.html}{PAIP}
-  \item \href{http://hop.perl.plover.com/}{HOP} .
-  \item \href{https://www.info.ucl.ac.be/~pvr/book.html}{CTM)
+  \item \href{http://hop.perl.plover.com/}{HOP}
+  \item \href{https://www.info.ucl.ac.be/~pvr/book.html}{CTM}
 \item I used to play Guitar and bass guitar. (very bad)
 \item I also love good conversations over beers about programming
   languages.
 
-\item I blog in \url{http://puntoblogspot.blogspot.com} since 2008.
+\item I blog in \url{http://puntoblogspot.blogspot.com} since
+  2008. Sharing mostly technical stuff.
 \item I like wordplays.
-%\item I currently live in \href{https://www.google.es/maps/place/Tenerife/@28.2925426,-17.0803948,9z/data=!3m1!4b1!4m2!3m1!1s0xc4029effe8682ed:0xb01a4bf1c84baf3c}{Tenerife}.
+\item I currently live in \href{https://www.google.es/maps/place/Tenerife/@28.2925426,-17.0803948,9z/data=!3m1!4b1!4m2!3m1!1s0xc4029effe8682ed:0xb01a4bf1c84baf3c}{Tenerife}.
 \item My Cv is on \href{https://github.com/kidd/Me}{Github}
 \end{rSection}
 
