Reformat CV to fit 3 pages.

--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -134,19 +134,21 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
 
 \begin{rSection}{Conferences}
 
-  I love attending conferences (preferably not very crowded/mainstream ones).
+  I love attending conferences (preferably not very crowded/mainstream
+  ones). I'm trying to attend at least 1 conference per year as a
+  healthy measure.
 
-\item J on the Beach 2017. (Malaga, Spain)
-\item LambdaWorld 2016. (Cadiz, Spain)
-\item Euroclojure 2015. (Barcelona, Spain)
-\item Polyconf 2014. (Postdam, Poland)
-\item ApiDays Barcelona 2014. As a Speaker
-\item ApiStrat EUrope 2014. As staff. (Amsterdam)
-\item Lua Workshop 2103 (Toulouse, France)
-\item European Lisp Symposium 2013 (Madrid, Spain)
-\item Fosdem 2013 (Brussels, Belgium)
-\item YAPC:EU (perl) 2009. (Lisbon, Portugal)
-\item PRACE Supercomputing 2009 (Barcelona, Spain)
+%% \item J on the Beach 2017. (Malaga, Spain)
+%% \item LambdaWorld 2016. (Cadiz, Spain)
+%% \item Euroclojure 2015. (Barcelona, Spain)
+%% \item Polyconf 2014. (Postdam, Poland)
+%% \item ApiDays Barcelona 2014. As a Speaker
+%% \item ApiStrat EUrope 2014. As staff. (Amsterdam)
+%% \item Lua Workshop 2103 (Toulouse, France)
+%% \item European Lisp Symposium 2013 (Madrid, Spain)
+%% \item Fosdem 2013 (Brussels, Belgium)
+%% \item YAPC:EU (perl) 2009. (Lisbon, Portugal)
+%% \item PRACE Supercomputing 2009 (Barcelona, Spain)
 
 \end{rSection}
 
@@ -199,14 +201,15 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
 \begin{rSection}{Personal}
 
 \item I love music (from rock and jazz to funk and psy \ldots).
-\item I like reading (``obviously'', my favourite technical books are
-  those that are known by their initials:
+\item Reading is another passion of mine. (``Obviously'', my favourite
+  technical books are those that are known by their initials:
   \begin{enumerate}
   \item \href{https://mitpress.mit.edu/sicp/}{SICP}
   \item \href{https://en.wikipedia.org/wiki/G%C3%B6del,_Escher,_Bach}{GEB}
   \item \href{http://norvig.com/paip.html}{PAIP}
   \item \href{http://hop.perl.plover.com/}{HOP}
   \item \href{https://www.info.ucl.ac.be/~pvr/book.html}{CTM}
+  \end{enumerate}
 \item I used to play Guitar and bass guitar. (very bad)
 \item I also love good conversations over beers about programming
   languages.
