Good for the soul

--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -136,7 +136,7 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
 
   I love attending conferences (preferably not very crowded/mainstream
   ones). I'm trying to attend at least 1 conference per year as a
-  healthy measure.
+  healthy measure (it's good for the soul).
 
 %% \item J on the Beach 2017. (Malaga, Spain)
 %% \item LambdaWorld 2016. (Cadiz, Spain)
