Add lambdaworld 2017 to conferences (commented out)

--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -138,6 +138,7 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
   ones). I'm trying to attend at least 1 conference per year as a
   healthy measure (it's good for the soul).
 
+%% \item LambdaWorld 2017. (Cadiz, Spain)
 %% \item J on the Beach 2017. (Malaga, Spain)
 %% \item LambdaWorld 2016. (Cadiz, Spain)
 %% \item Euroclojure 2015. (Barcelona, Spain)
