Added RE, ML and blockchain as interests.

--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -6,7 +6,7 @@
 \name{Raimon Grau} % Your name
 \address{ raimonster@gmail.com \\ http://puntoblogspot.blogspot.com \\ https://github.com/kidd/Me }
 
-\address{@Barcelona OR @Tenerife OR @Malaga \\ Spain} % Your address
+\address{@Barcelona OR @Tenerife \\ Spain} % Your address
 %% \address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -25,7 +25,7 @@ Final thesis on Evolutionary Algorithms graded with Honours. \smallskip \\
 \begin{rSection}{Languages}
 Spanish - native\\
 Catalan - native\\
-English - high ('writen' and spoken (yes, it's a joke :) ))\\
+English - high (written and spoken)\\
 \end{rSection}
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -107,28 +107,30 @@ English - high ('writen' and spoken (yes, it's a joke :) ))\\
   basic Lisp interpreters (see github).
 
 \item Protocols \& APIs: Working experience with HTTP, JSON, XML,
-  REST, SQL, Redis, MongoDB, Redshift, Oracle. Some experience with
-  lots of others: EventStore, Tarantool, influxdb, Gemstone/S,
-  DataFlex.  No real world experience with those though.
+  REST, SQL, Redis, MongoDB, Redshift, Oracle, Sqlite. Interest in and
+  side projects with lots of others: EventStore, Tarantool, influxdb,
+  Gemstone/S, DataFlex, cocroachdb.
 
-\item Development tools: Deep knowledge of zsh, screen, Vim (heavy
-  user for 5 years, written some plugins), Emacs (VERY heavy user for
-  5 years, written some plugins and contributed code to emacs itself),
-  git, Openresty (nginx+lua). Knowledge of elasticsearch, redis,
-  statsd+Graphite+grafana, AWS (experience with dynamodb, ec2, s3,
-  cloudwatch).
+\item Development tools: Deep knowledge of zsh, screen, Vim, Emacs
+  (VERY heavy user for 5 years, written some plugins and contributed
+  code to emacs itself), git, Openresty (nginx+lua). Knowledge of
+  elasticsearch, redis, statsd+Graphite+grafana, AWS (experience with
+  dynamodb, ec2, s3, cloudwatch).
 
 \item Passionate learner, and willing to transmit enthusiasm for
   learning technologies and balance them with the current stable
   stack. I'm quite cautious on ``The next big thing'' hypes (there is
   no silver bullet), and like to usually keep things very simple
   (\url{http://suckless.org}). I believe simplicity and uniformity
-  sometimes wins 'the perfect tool for the job' x Number-of-jobs.
+  sometimes wins 'the perfect tool for the job' x number-of-jobs.
 
-\item Good communication skills and enthusiast both teacher \& learner.
+\item Good communication skills and enthusiast teacher \& learner.
 
 \item I used to be into reverse engineering software (1997-2000). Most
   of it is outdated now, but my approach to problem solving stayed.
+
+\item I have a wide variety of interests from reverse engineering to
+  machine learning, compilers, blockchain technologies, etc.
 
 \end{rSection}
 
