Update cv with latest stuff

--- a/cv/other_cv.tex
+++ b/cv/other_cv.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 
 \name{Raimon Grau} % Your name
-\address{ raimonster@gmail.com \\ http://puntoblogspot.blogspot.com \\ https://github.com/kidd/Me }
+\address{ \url{raimonster@gmail.com} \\ \url{http://puntoblogspot.blogspot.com} \\ \url{https://github.com/kidd/Me} }
 
 \address{@Barcelona OR @Tenerife \\ Spain} % Your address
 %% \address{(+34)~$\cdot$~696809713 \\ raimonster@gmail.com} % Your phone number and email
@@ -32,7 +32,26 @@ English - high (written and spoken)\\
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
-\begin{rSubsection}{RavenPack International - https://ravenpack.com}{June 2016  - August 2017}{Software Engineer, Common Lisp Developer}{Marbella, Spain}
+  \begin{rSubsection}{Kong Inc - \url{https://konghq.com}}{February 2018 - }{Software Engineer, Tech Lead}{Remote}
+  \item Contributing to features for the enterprise version of Kong
+    product. Producing plugins and enterprise features like workspaces
+    & RBAC. Lua
+  \item Design a data collection tool based on a Kong
+    plugin. Offloading traffic data from Kong nodes to an API
+    endpoint. Collecting data, sanitizing and anonymising, and
+    triggering jobs for processing that data for several purposes (ML,
+    logs, docs, discovery). Python+Flask+PG+Celery+Docker.
+  \item Generating a Swagger and OpenAPI specs from real traffic seen
+    from live request/reponse pairs. Python
+  \item Managing Releases for Enterprise Kong product. Increasing the
+    peace of releases and smoothing the CI/CD pipeline to make easier
+    for newcommers to cut releases, debug packages, etc. Jenkins,
+    docker, and Bash. Lots of bash.
+\end{rSubsection}
+
+%------------------------------------------------
+
+\begin{rSubsection}{RavenPack International - \url{https://ravenpack.com}}{June 2016  - August 2017}{Software Engineer, Common Lisp Developer}{Marbella, Spain}
 \item Modernizing a 10 y.o Common Lisp codebase adding a test suite
   and a build system for it migrating it into continuous
   integration.
@@ -45,7 +64,9 @@ English - high (written and spoken)\\
   in-memory queues and AWS SQS. Common Lisp + Python.
 \end{rSubsection}
 
-\begin{rSubsection}{3scale, Inc - http://www.3scale.net/}{July 2011 - June 2016}{Software Engineer, Team Lead}{Barcelona, Spain}
+%------------------------------------------------
+
+\begin{rSubsection}{3scale, Inc - \url{http://www.3scale.net/}}{July 2011 - June 2016}{Software Engineer, Team Lead}{Barcelona, Spain}
 \item Maintaining and developing a Ruby on Rails application to manage
   API authentication and rate limitings. Team lead since 2014.
 \item Develop a code generator to create Nginx Lua configurations from
@@ -69,27 +90,27 @@ English - high (written and spoken)\\
 
 %------------------------------------------------
 
-\begin{rSubsection}{Gnuine}{December 2010 - July 2011}{Web Developer}{Barcelona, Spain}
-\item First contact with web development, Ruby, and Rails. Working in
-  different Ruby on Rails projects. First serious testing and Git
-  usage.
-\end{rSubsection}
+%% \begin{rSubsection}{Gnuine}{December 2010 - July 2011}{Web Developer}{Barcelona, Spain}
+%% \item First contact with web development, Ruby, and Rails. Working in
+%%   different Ruby on Rails projects. First serious testing and Git
+%%   usage.
+%% \end{rSubsection}
 
 %------------------------------------------------
 
 \begin{rSubsection}{Intelligent Pharma - http://intelligentpharma.com/}{July 2008 - December 2010}{Developer}{Barcelona, Spain}
 \item Developing Artificial intelligence software for drug discovery.
 \item Evolutionary algorithms and Genetic programming.
-\item Development in Perl, C++ and using unix everywhere. First usage of Mercurial.
+\item Development in Perl, C++ and using unix everywhere.
 \item coarse grained paralelization of jobs running in supercomputers
   (MareNostrum, the 2nd biggest supercomputer at that time)
 \end{rSubsection}
 
 
-\begin{rSubsection}{AMES S.A.}{September 2007 - 2003}{Developer}{Barcelona, Spain}
-\item Developing internal applications in Dataflex, Crystal Reports, and Perl.
-\item Developing industrial apps to manage machinery by reading barcodes.
-\end{rSubsection}
+%% \begin{rSubsection}{AMES S.A.}{September 2007 - 2003}{Developer}{Barcelona, Spain}
+%% \item Developing internal applications in Dataflex, Crystal Reports, and Perl.
+%% \item Developing industrial apps to manage machinery by reading barcodes.
+%% \end{rSubsection}
 
 \end{rSection}
 
